--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
     "mongo": "^0.1.0",
+    "mongodb": "^2.1.16",
+    "morgan": "^1.7.0",
     "response-time": "^2.3.1"
   }
 }
